--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link style.css>
+    <link>style.css</link>
     <title>Hello, World!</title>
   </head>
   
